--- a/terraform/main.tmpl
+++ b/terraform/main.tmpl
@@ -20,6 +20,7 @@ module "cert-manager" {
 module "nifikop" {
   source = "./modules/nifi-kop"
   #num_crd_created_cert_manager = module.cert-manager.num_crd_created
+  cert_manager_namespace = module.cert-manager.namespace
   # Configurable Variables
   {{(GetDefaults "nifi-kop" .)}}
 
@@ -27,4 +28,13 @@ module "nifikop" {
 
   
 
+}
+
+module "nifi-cluster" {
+  source = "./modules/nifi-cluster"
+  #num_crd_created_cert_manager = module.cert-manager.num_crd_created
+  #cert_manager_namespace = module.cert-manager.namespace
+  nifi_issuer_name = module.nifikop.nifi_issuer_name
+  # Configurable Variables
+  {{(GetDefaults "nifi-cluster" .)}}
 }
